--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "\"./node_modules/.bin/jest\" --watch"
   },
   "dependencies": {
     "next": "12.1.1",
@@ -17,6 +18,8 @@
   "devDependencies": {
     "babel-plugin-styled-components": "^1.8.0",
     "eslint": "8.12.0",
-    "eslint-config-next": "12.1.1"
+    "eslint-config-next": "12.1.1",
+    "jest": "^27.5.1",
+    "react-test-renderer": "^17.0.2"
   }
 }
