--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "\"./node_modules/.bin/jest\" --watch"
+    "test": "\"./node_modules/.bin/jest\" --all"
   },
   "dependencies": {
     "next": "12.1.1",
